cros: When kiosk apps are loaded, clear out old outstanding app launch errors.

This allows the auto-launched kiosk apps to run on next reboot after being user-canceled during the splash screen.

Bug: 878537
Change-Id: I023a074a908ac4e8b3d32189cc9c09ad145aeec9
Reviewed-on: https://chromium-review.googlesource.com/1195042
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586978}
Former-commit-id: 4e8cdebbb7daf88ce03aa7984426bea4daf86a98